--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "intfinity"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 description = "An abstraction over numeric types with infinity implemented."
 repository = "https://github.com/samarthsoup/intfinity"
 license-file = "LICENSE.txt"
 keywords = ["arithmetic", "infinity", "mathematics", "numbers"]
-categories = ["mathematics"]
+categories = ["mathematics", "no-std::no-alloc"]
 
 [dependencies]
